tests/snapshots/examples_fixtures/io__aoc_day5_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day5_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E400]: MISSING EFFECT

Call to `read_lines` requires effect `IO` in this function signature.

  --> examples/io/aoc_day5_haskell_style.flx:73:17
   |
73 |     let lines = read_lines(path)
   |                 ^^^^^^^^^^
   |                 ---------- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
